Skeleton almost works. But now Keen is broken on the right onload. Readjusts correctly when window is resized.

--- a/src/css/styles/bwSkeleton.css
+++ b/src/css/styles/bwSkeleton.css
@@ -1,13 +1,49 @@
+.red {
+  border: 1px solid red;
+  background-color: red;
+}
+.blue {
+    border: 1px solid red;
+
+  background-color: blue;
+}
+.green {
+    /* border: 1px solid red; */
+
+  background-color: green;
+}
+.gray {
+    border: 1px solid red;
+
+  background-color: gray;
+}
+.yellow {
+    border: 1px solid red;
+
+  background-color: yellow;
+}
+.black {
+    border: 1px solid red;
+
+  background-color: black;
+}
+.orange {
+    border: 1px solid red;
+
+  background-color: orange;
+}
+
+
 .skeleton {
   opacity: .7;
   animation: skeleton-loading 1s linear infinite alternate;
 }
 @keyframes skeleton-loading {
   0% {
-    background-color: hsl(200, 200%, 70%);
+    background-color: hsl(rgb(227, 227, 227), 200%, 70%);
   }
   100% {
-    background-color: hsl(200, 200%, 95%);
+    background-color: hsl(rgb(227, 227, 227), 200%, 95%);
   }
 }
 
@@ -18,13 +54,32 @@
 .skeleton {
   background-color: rgb(227, 227, 227);
 }
+.nft_coll-skeleton {
+  border: 1px solid rgb(227, 227, 227);
+  border-radius: 10px;
+  margin-right: 10px;
+}
 .nft_wrap-skeleton {
   position: relative;
   width: 100%;
   height: 126px;
   border-radius: 10px;
-  max-width: 315px;
-  max-height: 126px;
+  /* max-width: 315px; */
+  /* max-height: 126px; */
+  background-color: rgb(227, 227, 227);
+  overflow: hidden;
+}
+.nft_coll_pp-skeleton {
+  width: 60px;
+  height: 60px;
+  display: block;
+  margin: 0 auto;
+  margin-top: -30px;
+  margin-bottom: 10px;
+  position: relative;
+  border-radius: 100%;
+    background-color: rgb(227, 227, 227);
+
 }
 
 .nft_coll_pp p {
@@ -38,18 +93,20 @@
   margin-bottom: 10px;
 }
 
-.nft_col_info {
+.nft_coll_info {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.skelDesc__Up {
+.skelDesc__Upper {
   height: 19px;
   width: 100px;
+  border-radius: 5px;
 }
-.skelDesc__Down {
+.skelDesc__Lower {
   margin-top: 8px;
   height: 19px;
   width: 50px;
+  border-radius: 5px;
 }
